log
Wed, Apr 16, 2025 10:41:42 PM: 
 tests:  0|6
total_score: 0/70
eeef3b7
Wed, Apr 16, 2025 10:48:39 PM: 
 hashmap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  1|5
total_score: 10/70
4ef2ffa
Wed, Apr 16, 2025 10:58:14 PM: 
 hashmap.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  1|5
total_score: 10/70
623853a
Wed, Apr 16, 2025 11:08:47 PM: 
 hashmap.c | 25 +++++++++++++++++++++++--
 1 file changed, 23 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:84:10: error: unused variable 'posicion' [-Werror=unused-variable]
     long posicion= posicionvalida(map, key);
          ^~~~~~~~
cc1.exe: all warnings being treated as errors
10b7686
Wed, Apr 16, 2025 11:15:59 PM: 
 hashmap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:85:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if(posicion= -1){return;}
     ^~
hashmap.c:87:69: error: comparison between pointer and integer [-Werror]
     if(map->buckets[posicion]==NULL && map->buckets[posicion]->value==-1)
                                                                     ^~
hashmap.c:92:43: error: expected expression before 'Pair'
             map->buckets[posicion]=malloc(Pair);
                                           ^~~~
cc1.exe: all warnings being treated as errors
81d3ad4
Wed, Apr 16, 2025 11:57:55 PM: 
 hashmap.c | 23 +++++++++++------------
 1 file changed, 11 insertions(+), 12 deletions(-)
 tests:  5|4
total_score: 30/70
8e8c836
Thu, Apr 17, 2025 12:14:02 AM: 
 hashmap.c | 37 +++++++++++++++++++++++++++++++++++++
 1 file changed, 37 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:169:9: error: expected ',' or ';' before 'if'
         if(map->buckets[i]==NULL)
         ^~
hashmap.c:168:14: error: unused variable 'i' [-Werror=unused-variable]
         long i = posicionvalida(map, key)
              ^
hashmap.c:177:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
c0d2eab
Thu, Apr 17, 2025 12:14:42 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:169:9: error: expected ',' or ';' before 'if'
         if(map->buckets[i]==NULL)
         ^~
hashmap.c:168:14: error: unused variable 'i' [-Werror=unused-variable]
         long i = posicionvalida(map, key)
              ^
hashmap.c:176:5: error: 'return' with no value, in function returning non-void [-Werror]
     return;
     ^~~~~~
hashmap.c:158:8: note: declared here
 Pair * searchMap(HashMap * map,  char * key) {
        ^~~~~~~~~
cc1.exe: all warnings being treated as errors
56d15e9
Thu, Apr 17, 2025 12:15:05 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:169:9: error: expected ',' or ';' before 'if'
         if(map->buckets[i]==NULL)
         ^~
hashmap.c:168:14: error: unused variable 'i' [-Werror=unused-variable]
         long i = posicionvalida(map, key)
              ^
cc1.exe: all warnings being treated as errors
b55d0bf
Thu, Apr 17, 2025 12:16:21 AM: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 30/70
6f77d1f
